Har nu tilføjet en viewModel, for at vise hvordan vi kunne have gjort. For at den kan vende og beholde data, samt følge anbefalede arkitektur.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="height" />
     <string name="Get_BMI">Get your BMI</string>
     <string name="input_bmi" />
+    <string name="next">Next Page</string>
 </resources>
